# agents-chat-rs

./: .gitignore  Cargo.toml  README.md
demos/: better_times_cz.yaml  flat_earth_cn.yaml  flat_earth_cz.yaml  flat_earth_de.yaml  flat_earth_en.yaml  flat_earth_es.yaml  flat_earth_fr.yaml  flat_earth_jp.yaml  flat_earth_ollama_cz.yaml  flat_earth_ollama_en.yaml  flat_earth_openrouter_cz.yaml  flat_earth_pt.yaml
demos/better_times_cz/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md  question.yaml
demos/flat_earth_cn/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md  question.yaml
demos/flat_earth_cz/: AgentA.yaml  AgentB.md  AgentB.yaml
demos/flat_earth_de/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md  question.yaml
demos/flat_earth_en/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md  question.yaml
demos/flat_earth_es/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md  question.yaml
demos/flat_earth_fr/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md  question.yaml
demos/flat_earth_jp/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md  question.yaml
demos/flat_earth_ollama_cz/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md
demos/flat_earth_ollama_en/: AgentA.md  AgentA.yaml  AgentB.yaml
demos/flat_earth_openrouter_cz/: AgentA.yaml  AgentB.yaml  question.yaml
demos/flat_earth_pt/: AgentA.md  AgentA.yaml  AgentB.md  AgentB.yaml  Question.md  question.yaml
src/: demo.rs  language.rs  main.rs  provider.rs  provider_anthropic.rs  provider_ollama.rs  provider_openai.rs  provider_openrouter.rs
