[package]
name = "agents-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for Anthropic manual HTTP calls)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support for Provider trait objects
async-trait = "0.1"

# OpenAI - Responses API
async-openai = { version = "0.33", features = ["responses"] }

# Ollama
ollama-rs = "0.3"

[dev-dependencies]
tempfile = "3"
